# fanshark

./: .gitignore  LICENSE  README.md  SECURITY.md  abstract.txt  pyproject.toml
examples/: trace.json
src/fanshark/: __init__.py  analyze.py  capture.py  cli.py  features.py
tests/: test_pipeline.py
